Chapter-2/Part-3/e-1.09/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  labels:
    app: log-output
    version: "1.07"
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
      version: "1.07"
      component: backend
  template:
    metadata:
      labels:
        app: log-output
        version: "1.07"
        component: backend
    spec:
      containers:
        - name: log-output-container
          image: michaelangelovalente/log_output-img:ex1.07
          # ENV variables config
          ports:
            - name: http-server
              containerPort: 8080
              protocol: TCP
